--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Facebook Networks</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 </head>
 <body>
     <h1>Mis Amigos</h1>
